@@ -4,6 +4,7 @@
 
 Version 1.1rc to be released
 ----------------------------
+- Enh #711: Added CWebUser::autoRenewCookie to support automatically renew cookie-based login (Qiang)
 - Enh: Added CSS class for links generated by CSort to differentiate sorting directions (Qiang)
 - Enh: Added CComponent::evaluateExpression() (Qiang)
 - Enh: Added CPagination::offset and CPagination::limit (Qiang)
